# pattern_pose_estimation

./: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  nodelet_plugins.xml  package.xml
cfg/: marker_detector.yaml  markers.yaml  spiral_marker.yaml
doc/markers/: markers1_4x4  markers2_4x4  markers2_4x4~  markers3_4x4  markers3_4x4~  markers4_4x4  markers4_4x4~  markers5_4x4  markers5_4x4~
include/: marker_detector.h  marker_detector_node.h  marker_detector_server.h
launch/: checkerboard_detector.launch  marker_detector.launch  marker_detector_server.launch  spiral_marker_detector.launch
src/: camera_pose_node.cpp  checkerboard_detector_node.cpp  marker_detector.cpp  marker_detector_node.cpp  marker_detector_node_main.cpp  marker_detector_nodelet.cpp  marker_detector_server.cpp  marker_detector_server_main.cpp  marker_filter_node.cpp  pattern_pose_node.cpp
src/test/: marker_detector_service_test.cpp
srv/: DetectMarker.srv
test/: marker_detector_service.test
test/data/: ueye.yaml
