<package>
  <name>pattern_pose_estimation</name>
  <version>0.0.1</version>
  <description>pose_calibration</description>
  <maintainer email="miquel.massot@uib.cat">Miquel Massot</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pattern_pose_estimation</url>
  <author>Stephan Wirth</author>
  <author>Joan Pau Beltran</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>camera_calibration_parsers</build_depend>
  <build_depend>ar_pose</build_depend>
  <build_depend>libartoolkit</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nodelet</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>camera_calibration_parsers</run_depend>
  <run_depend>ar_pose</run_depend>
  <run_depend>libartoolkit</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nodelet</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>image_transport</test_depend> -->
  <!-- <test_depend>opencv2</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>cv_bridge</test_depend> -->
  <!-- <test_depend>camera_calibration_parsers</test_depend> -->
  <!-- <test_depend>ar_pose</test_depend> -->
  <!-- <test_depend>artoolkit</test_depend> -->
  <!-- <test_depend>nodelet</test_depend> -->

<export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
</export>

</package>
